--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -17,6 +17,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@main
         with:
-          charts_dir: helm/charts
+          charts_dir: charts
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
