--- a/charts/o-an-quan/templates/fe-deployment.yaml
+++ b/charts/o-an-quan/templates/fe-deployment.yaml
@@ -35,6 +35,12 @@ spec:
             {{- toYaml .Values.frontend.securityContext | nindent 12 }}
           image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
+          env:
+            - name: OVERSION
+              value: {{ .Values.frontend.image.tag | default .Chart.AppVersion }}   
+            {{- with .Values.frontend.extraEnv }}
+            {{- tpl . $ | nindent 12 }}
+            {{- end }}
           ports:
             - name: http
               containerPort: 3000
