--- a/charts/o-an-quan/templates/be-deployment.yaml
+++ b/charts/o-an-quan/templates/be-deployment.yaml
@@ -38,9 +38,12 @@ spec:
           env:
             - name: OVERSION
               value: {{ .Values.backend.image.tag | default .Chart.AppVersion }}   
-            {{- with .Values.backend.extraEnv }}
-            {{- tpl . $ | nindent 12 }}
-            {{- end }}
+            - name: REACT_APP_BASE_URL
+              value: {{ .Values.backend.baseurl }}
+            - name: REACT_APP_SOCKET_URL
+              value: {{ .Values.backend.socketurl }}
+            - name: REACT_APP_BASE_URL
+              value: {{ .Values.backend.socketport }}
           ports:
             - name: http
               containerPort: 3003
