--- a/charts/o-an-quan/templates/be-deployment.yaml
+++ b/charts/o-an-quan/templates/be-deployment.yaml
@@ -36,14 +36,14 @@ spec:
           image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.backend.image.pullPolicy }}
           env:
-            - name: OVERSION
-              value: {{ .Values.backend.image.tag | default .Chart.AppVersion }}   
-            - name: REACT_APP_BASE_URL
-              value: "{{ .Values.backend.baseurl }}"
-            - name: REACT_APP_SOCKET_URL
-              value: "{{ .Values.backend.socketurl }}"
-            - name: REACT_APP_BASE_URL
-              value: {{ .Values.backend.socketport }}
+          - name: OVERSION
+            value: {{ .Values.backend.image.tag | default .Chart.AppVersion }}   
+          - name: REACT_APP_BASE_URL
+            value: "{{ .Values.backend.baseurl }}"
+          - name: REACT_APP_SOCKET_URL
+            value: "{{ .Values.backend.socketurl }}"
+          - name: REACT_APP_BASE_URL
+            value: "{{ .Values.backend.socketport }}"
           ports:
             - name: http
               containerPort: 3003
