--- a/charts/o-an-quan/templates/be-deployment.yaml
+++ b/charts/o-an-quan/templates/be-deployment.yaml
@@ -43,7 +43,7 @@ spec:
           - name: REACT_APP_SOCKET_URL
             value: "{{ .Values.backend.socketurl }}"
           - name: REACT_APP_BASE_URL
-            value: "{{ .Values.backend.socketport }}"
+            value: {{ .Values.backend.socketport }}
           ports:
             - name: http
               containerPort: 3003
