--- a/charts/o-an-quan/templates/fe-deployment.yaml
+++ b/charts/o-an-quan/templates/fe-deployment.yaml
@@ -37,7 +37,13 @@ spec:
           imagePullPolicy: {{ .Values.frontend.image.pullPolicy }}
           env:
           - name: OVERSION
-            value: {{ .Values.frontend.image.tag | default .Chart.AppVersion }}   
+            value: {{ .Values.backend.image.tag | default .Chart.AppVersion }}   
+          - name: REACT_APP_BASE_URL
+            value: "{{ .Values.backend.baseurl }}"
+          - name: REACT_APP_SOCKET_URL
+            value: "{{ .Values.backend.socketurl }}"
+          - name: REACT_APP_BASE_URL
+            value: {{ .Values.backend.socketport }}
           ports:
             - name: http
               containerPort: 3000
