--- a/charts/o-an-quan/values.yaml
+++ b/charts/o-an-quan/values.yaml
@@ -54,6 +54,10 @@ frontend:
     # Overrides the image tag whose default is the chart appVersion.
     tag: "0.0.1"
 
+  baseurl: "localhost"
+  socketurl: "localhost"
+  socketport: 3003
+
   imagePullSecrets: []
 
   podAnnotations: {}
