--- a/charts/conduit/values.yaml
+++ b/charts/conduit/values.yaml
@@ -95,4 +95,5 @@ conduit_toml:
   max_request_size: '20_000_000'
   allow_registration: true
   trusted_servers: '["matrix.org","app.element.io"]'
+  log_level: 'info' 
   proxy: "none"
