--- a/charts/conduit/Chart.yaml
+++ b/charts/conduit/Chart.yaml
@@ -17,7 +17,7 @@ type: application
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.3
 
-# This is the version number of the application being deployed. This version number should be
+# This is the version number ohttps://github.com/S7evinK/dendrite-helm.githttps://github.com/S7evinK/dendrite-helm.gitf the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
