feat: add dendrite chart

--- a/charts/dendrite/templates/secrets.yaml
+++ b/charts/dendrite/templates/secrets.yaml
@@ -64,12 +64,12 @@ stringData:
     # connection can be idle in seconds - a negative value is unlimited.
 
     # The version of the configuration file.
-    version: 2
+    version: {{ .Values.configuration.version }}
 
     # Global Matrix configuration. This configuration applies to all components.
     global:
       # The domain name of this homeserver.
-      server_name: {{ required "A server_name must be supplied." .Values.configuration.server_name | quote }}
+      server_name: {{ required "A server_name must be supplied." .Values.configuration.servername | quote }}
 
       # The path to the signing private key file, used to sign requests and events.
       private_key: /etc/dendrite/secrets/signing.key
@@ -96,7 +96,6 @@ stringData:
       # to other servers and the federation API will not be exposed.
       disable_federation: {{ .Values.configuration.disable_federation }}
 
-      # Configuration for NATS JetStream
       jetstream:
         # A list of NATS Server addresses to connect to. If none are specified, an
         # internal NATS server will be started automatically when running Dendrite
@@ -117,6 +116,8 @@ stringData:
         # Persistent directory to store JetStream streams in. This directory 
         # should be preserved across Dendrite restarts.
         storage_path: {{ .Values.configuration.jetstream.storage_path | quote }}
+
+        use_naffka: false
 
       # Configuration for Prometheus metric collection.
       metrics:
@@ -254,6 +255,17 @@ stringData:
         connect: http://{{ .Values.components.keyserver.connect }}
       database:
         connection_string: postgresql://{{- $databaseConnectionString -}}/dendrite_keyserver?sslmode=disable
+        max_open_conns: {{ $maxOpenConns }}
+        max_idle_conns: {{ $maxIdleConns }}
+        conn_max_lifetime: {{ $conMaxLifeTime }}
+
+    # Configuration for the Signing Key Server (for end-to-end encryption).
+    signing_key_server:
+      internal_api:
+        listen: http://[::]:{{ .Values.components.signingkeyserver.listen_int }}
+        connect: http://{{ .Values.components.signingkeyserver.connect }}
+      database:
+        connection_string: postgresql://{{- $databaseConnectionString -}}/dendrite_signingkeyserver?sslmode=disable
         max_open_conns: {{ $maxOpenConns }}
         max_idle_conns: {{ $maxIdleConns }}
         conn_max_lifetime: {{ $conMaxLifeTime }}
