--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -17,7 +17,9 @@ jobs:
       - name: Add repositories
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm repo add nats https://nats-io.github.io/k8s/helm/charts
+          helm repo add nats https://nats-io.github.io/k8s/helm/chartsForgot password?
+￼Sign in
+New? Create account
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@main
         with:
