--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -17,9 +17,7 @@ jobs:
       - name: Add repositories
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
-          helm repo add nats https://nats-io.github.io/k8s/helm/chartsForgot password?
-￼Sign in
-New? Create account
+          helm repo add nats https://nats-io.github.io/k8s/helm/charts
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@main
         with:
