--- a/charts/matrixalertmanager/templates/configmap.yaml
+++ b/charts/matrixalertmanager/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "elementweb.fullname" . }}
+  name: {{ include "matrixalertmanager.fullname" . }}
   labels:
-    {{- include "elementweb.labels" . | nindent 4 }}
+    {{- include "matrixalertmanager.labels" . | nindent 4 }}
 data:
   .env: |
     APP_PORT={{ .Values.service.port }}
