--- a/charts/matrixalertmanager/templates/deployment.yaml
+++ b/charts/matrixalertmanager/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           volumeMounts:
           - mountPath: /app/.env
-            name: alertmanager-config
+            name: {{ include "matrixalertmanager.fullname" . }}
             subPath: .env
           ports:
             - name: http
@@ -51,14 +51,14 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- with .Values.nodeSelector }}
       volumes:
-        - name: alertmanager-config
+        - name: {{ include "matrixalertmanager.fullname" . }}
           configMap:
             name: {{ include "matrixalertmanager.fullname" . }}
             items:
             - key: .env
               path: .env
+      {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
