--- a/charts/matrixalertmanager/templates/deployment.yaml
+++ b/charts/matrixalertmanager/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
             subPath: .env
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
