--- a/charts/neb/values.yaml
+++ b/charts/neb/values.yaml
@@ -83,3 +83,14 @@ affinity: {}
 
 config:
   base_url: "http://neb.apps.svc.cluster.local:4050"
+
+  # TODO should be a list of clients and loop around the list
+  clients: []
+
+  # TODO should be a list of services and loop around the list
+  services: []
+
+  # TODO should be a list of rooms and loop around the list
+  room_id: "!ikx3OO5J9tBZksla:dendrite.maibaloc.com"
+
+  # TODO template html for the room text
