fix: bump saleor-core

--- a/charts/saleor-core/templates/secret.yaml
+++ b/charts/saleor-core/templates/secret.yaml
@@ -62,7 +62,7 @@ data:
 {{- end }}
 
 
-{{- if and .Values.externalServices.postgresql.password (not (empty .Values.externalServices.postgresql.password)) -}}
+{{- if .Values.externalServices.postgresql.password -}}
   POSTGRESQL_PASSWORD: {{ .Values.externalServices.postgresql.password | b64enc | quote }}
 {{- end }}
 
