fck off secrets

--- a/charts/saleor-core/templates/secret.yaml
+++ b/charts/saleor-core/templates/secret.yaml
@@ -57,12 +57,12 @@ data:
 {{- end }}
 
 
-{{- if .Values.externalServices.redis.password -}}
+{{- if .Values.externalServices.redis.password (not .Values.existingSecret) -}}
   REDIS_PASSWORD: {{ .Values.externalServices.redis.password | b64enc | quote }}
 {{- end }}
 
 
-{{- if .Values.externalServices.postgresql.password -}}
+{{- if and .Values.externalServices.postgresql.password (not .Values.existingSecret) -}}
   POSTGRESQL_PASSWORD: {{ .Values.externalServices.postgresql.password | b64enc | quote }}
 {{- end }}
 
