--- a/charts/yuta/templates/deployment-messaging.yaml
+++ b/charts/yuta/templates/deployment-messaging.yaml
@@ -39,11 +39,22 @@ spec:
             {{- toYaml .Values.messaging.securityContext | nindent 12 }}
           image: "{{ .Values.messaging.image.repository }}:{{ .Values.messaging.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.messaging.image.pullPolicy }}
+          {{ if .Values.temporary.googleauth }}
+          env:
+          - name: GOOGLE_APPLICATION_CREDENTIALS
+            value: "/yuta-service-account.json"
+          {{- end }}
           volumeMounts:
           - name: config-yaml
             mountPath: "/config.yaml"
             subPath: config.yaml
             readOnly: true
+          {{ if .Values.temporary.googleauth }}
+          - name: yuta-service-account-json
+            mountPath: "/yuta-service-account.json"
+            subPath: yuta-service-account.json
+            readOnly: true
+          {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.messaging.service.port }}
@@ -58,17 +69,21 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.messaging.resources | nindent 12 }}
-      {{- if .Values.messaging.configuration.existingSecret }}
       volumes:
+      {{- if .Values.messaging.configuration.existingSecret }}
       - name: config-yaml
         secret:
           secretName: {{ .Values.messaging.configuration.existingSecret }}
       {{- else }}
-      volumes:
       - name: config-yaml
         configMap:
           name: {{ include "yuta.fullname" . }}-messaging
       {{- end}}
+      {{ if .Values.temporary.googleauth }}
+      - name: yuta-service-account-json
+        secret:
+          secretName: yuta-service-account-json
+      {{- end }}
       {{- with .Values.messaging.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
