--- a/charts/yuta/templates/serviceaccount-core.yaml
+++ b/charts/yuta/templates/serviceaccount-core.yaml
@@ -10,4 +10,28 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ include "yuta.serviceAccountName" . }}-core
+rules:
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["pods", "secrets", "configmaps", "serviceaccounts"]
+  verbs: ["get", "watch", "list", "create", "update"]
+- apiGroups: ["extensions", "apps"]
+  resources: ["deployments"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "yuta.serviceAccountName" . }}-core
+subjects:
+- kind: ServiceAccount
+  name: {{ include "yuta.serviceAccountName" . }}-core
+roleRef:
+  kind: Role
+  name: {{ include "yuta.serviceAccountName" . }}-core
+  apiGroup: rbac.authorization.k8s.io
 {{- end }}
