--- a/charts/yuta/values.yaml
+++ b/charts/yuta/values.yaml
@@ -123,6 +123,69 @@ messaging:
         languagecode: "en-US"
         type: "diaglogflow"
 
+webhook:
+  enabled: true
+  replicaCount: 1
+
+  image:
+    repository: locmai/yuta-webhook
+    tag: ""
+
+  imagePullSecrets: []
+
+  podAnnotations: {}
+
+  podSecurityContext: {}
+
+  securityContext: {}
+
+  service:
+    type: ClusterIP
+    port: 8501
+
+  resources: {}
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  configuration:
+    existingSecret: ""
+    server:
+      host: "0.0.0.0"
+      port: "8501"
+      timeout: 15
+
+
+    jetstream:
+      addresses: 
+      - "yutaops-nats:4222"
+      topic_prefix: "Yuta"
+
+    metrics:
+      enabled: true
+
+    tracing:
+      enabled: false
+
+    logging:
+      - type: "stdout"
+        level: "DEBUG"
+
+
+    chatClients:
+      - username: "yuta"
+        password: "verystronkpassword"
+        homeserverurl: "dendrite.maibaloc.com"
+        type: "matrix"
+
+    nluClients:
+      - projectid: "yuta-seig"
+        languagecode: "en-US"
+        type: "diaglogflow"
+
 temporary:
   googleauth: true
 
