--- a/charts/yuta/templates/deployment-webhook.yaml
+++ b/charts/yuta/templates/deployment-webhook.yaml
@@ -5,13 +5,13 @@ metadata:
   name: {{ include "yuta.fullname" . }}-webhook
   labels:
     {{- include "yuta.labels" . | nindent 4 }}
-    component: core
+    component: webhook
 spec:
   replicas: {{ .Values.webhook.replicaCount }}
   selector:
     matchLabels:
       {{- include "yuta.selectorLabels" . | nindent 6 }}
-      component: core
+      component: webhook
   template:
     metadata:
       {{- with .Values.webhook.podAnnotations }}
@@ -20,18 +20,18 @@ spec:
       {{- end }}
       labels:
         {{- include "yuta.selectorLabels" . | nindent 8 }}
-        component: core
+        component: webhook
     spec:
       {{- with .Values.webhook.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "yuta.serviceAccountName" . }}-core
+      serviceAccountName: {{ include "yuta.serviceAccountName" . }}-webhook
       securityContext:
         {{- toYaml .Values.webhook.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          command: ["/core"]
+          command: ["/webhook"]
           args:
           - '--config'
           - '/config.yaml'
@@ -67,7 +67,7 @@ spec:
       volumes:
       - name: config-yaml
         configMap:
-          name: {{ include "yuta.fullname" . }}-core
+          name: {{ include "yuta.fullname" . }}-webhook
       {{- end}}
       {{- with .Values.webhook.nodeSelector }}
       nodeSelector:
