--- a/charts/yuta/templates/service-webhook.yaml
+++ b/charts/yuta/templates/service-webhook.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.webhook.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -15,3 +16,4 @@ spec:
   selector:
     {{- include "yuta.selectorLabels" . | nindent 4 }}
     component: webhook
+{{- end }}
