--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,7 @@ jobs:
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add grafana https://grafana.github.io/helm-charts
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm repo add nats https://nats-io.github.io/k8s/helm/charts/
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
