fix: excalidraw image
Signed-off-by: Loc Mai <locmai0201@gmail.com>

--- a/charts/excalidraw/values.yaml
+++ b/charts/excalidraw/values.yaml
@@ -11,7 +11,7 @@ replicaCount: 1
 ## @param image.tag image tag (immutable tags are recommended)
 ##
 image:
-  repository: excalidraw
+  repository: excalidraw/excalidraw
   pullPolicy: IfNotPresent
   tag: "sha-4bfc5bb"
 
