--- a/charts/cilium-monitor/Chart.yaml
+++ b/charts/cilium-monitor/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: cillium-monitor
-description: A Helm chart for deploying PodMonitor resources for Cillium's components
+name: cilium-monitor
+description: A Helm chart for deploying PodMonitor resources for cilium's components
 type: application
-version: 0.0.2
+version: 0.0.3
 appVersion: "v1.12"
 keywords:
-  - cillium
+  - cilium
   - hubble
 maintainers:
   - email: locmai0201@gmail.com
