--- a/charts/cilium-monitor/templates/agent-podmonitor.yaml
+++ b/charts/cilium-monitor/templates/agent-podmonitor.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: cillium-agent-metrics
+  name: cilium-agent-metrics
   labels:
     k8s-app: cilium
 spec:
