--- a/charts/cilium-monitor/templates/operator-podmonitor.yaml
+++ b/charts/cilium-monitor/templates/operator-podmonitor.yaml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: cillium-operator-metrics
+  name: cilium-operator-metrics
   labels:
     name: cilium-operator
 spec:
