--- a/charts/example/templates/service.yaml
+++ b/charts/example/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "exampl.fullname" . }}
+  name: {{ include "example.fullname" . }}
   labels:
-    {{- include "exampl.labels" . | nindent 4 }}
+    {{- include "example.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "exampl.selectorLabels" . | nindent 4 }}
+    {{- include "example.selectorLabels" . | nindent 4 }}
