--- a/charts/example/templates/serviceaccount.yaml
+++ b/charts/example/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "exampl.serviceAccountName" . }}
+  name: {{ include "example.serviceAccountName" . }}
   labels:
-    {{- include "exampl.labels" . | nindent 4 }}
+    {{- include "example.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
