chore: set job_name

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -24,6 +24,7 @@ jobs:
     strategy:
       matrix:
         dir: ${{ fromJson(needs.collect-dirs.outputs.dirs) }}
+    name: ${{ matrix.dir }}
     steps:
       - run: echo ${{ matrix.dir }}
       # - uses: google-github-actions/release-please-action@v3
