fix: fix something in both charts

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -27,7 +27,7 @@ jobs:
     name: ${{ matrix.dir }}
     steps:
       - run: echo ${{ matrix.dir }}
-      # - uses: google-github-actions/release-please-action@v3
-      #   with:
-      #     release-type: helm
-      #     path: ${{ matrix.dir }} 
+      - uses: google-github-actions/release-please-action@v3
+        with:
+          release-type: helm
+          path: ${{ matrix.dir }} 
