--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,9 +25,10 @@ jobs:
       - name: Add repositories
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add external-secrets https://charts.external-secrets.io
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: "${{ secrets.CR_TOKEN }}"
-	  CR_GENERATE_RELEASE_NOTES: true
+          CR_GENERATE_RELEASE_NOTES: true
