chore: remove default value for config

--- a/charts/secret-generator/values.yaml
+++ b/charts/secret-generator/values.yaml
@@ -1,8 +1,8 @@
-config:
-  - name: dex.grafana
-    data:
-      - key: client_secret
-        length: 32
+config: []
+  # - name: dex.grafana
+  #   data:
+  #     - key: client_secret
+  #       length: 32
 
 secret-external:
   enabled: false
