chore(temporal): disable monitoring stack by default

--- a/charts/temporal/values.yaml
+++ b/charts/temporal/values.yaml
@@ -402,12 +402,12 @@ elasticsearch:
   visibilityIndex: "temporal_visibility_v1_dev"
 
 prometheus:
-  enabled: true
+  enabled: false
   nodeExporter:
     enabled: false
 
 grafana:
-  enabled: true
+  enabled: false
   replicas: 1
   testFramework:
     enabled: false
