--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,12 +1,4 @@
 {
-  ".": "0.0.0",
-  "release-type": "helm",
-  "packages": {
-    "charts/secret-generators": {
-      "component": "secret-generators"
-    },
-    "charts/temporal": {
-      "component": "temporal"
-    }
-  }
+  "charts/secret-generators": "0.1.3",
+  "charts/temporal": "0.32.0"
 }
