--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,4 +2,12 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "helm",
   "include-component-in-tag": false
+  "packages": {
+    "charts/secret-generator": {
+      "component": "secret-generator"
+    },
+    "charts/temporal": {
+      "component": "temporal"
+    }
+  }
 }
