--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "helm",
-  "include-component-in-tag": false
+  "include-component-in-tag": false,
   "packages": {
     "charts/secret-generator": {
       "component": "secret-generator"
