chore(secret-generator): set 0.1.4 as release-as

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
   "packages": {
     "charts/secret-generator": {
       "component": "secret-generator"
+      "release-as": "0.1.4"
     },
     "charts/temporal": {
       "component": "temporal"
