--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "release-type": "helm",
   "packages": {
     "charts/secret-generator": {
-      "component": "secret-generator"
+      "component": "secret-generator",
       "release-as": "0.1.4"
     },
     "charts/temporal": {
