fix(temporal): add Loc Mai as maintainer

--- a/charts/temporal/Chart.yaml
+++ b/charts/temporal/Chart.yaml
@@ -14,6 +14,8 @@ keywords:
 maintainers:
   - name: Temporal Technologies Inc.
     url: https://temporal.io/
+  - name: Loc Mai
+    url: https://maibaloc.com
 
 sources:
   - https://github.com/temporalio/temporal
