--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,7 +5,7 @@ on:
       - edited # for testing only
 env:
   RELEASE_TAG: ${{ github.ref_name }}
-job:
+jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
