--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,8 +12,20 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Echo ref_name
+      - uses: azure/setup-helm@v4.2.0
+        with:
+           version: '<version>' # default is latest (stable)
+        id: setup_helm
+      - name: Get Chart name
+        id: get_chart_name
         run: |
           echo ${{ env.RELEASE_TAG }}
-
-
+          version=${{ env.RELEASE_TAG }}
+          chart_name=$(echo "$version" | sed 's/-v.*$//')
+          echo "$chart_name"
+          echo "chart_name=$chart_name" >> "$GITHUB_OUTPUT"
+      - name: Publish
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io/locmai --username locmai --password-stdin
+          helm package ./charts/${{ steps.get_chart_name.outputs.chart_name }}
+          helm push ${{ env.RELEASE_TAG }}.tgz ocig://ghcr.io/locmai
