--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,6 @@
 on:
   release:
-    types: [published, edited]
+    types: [published, edited, created]
 
 env:
   RELEASE_TAG: ${{ github.ref_name }}
