--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v4
         id: release
-        env:
-          GITHUB_TOKEN: ${{ secrets.CR_TOKEN }}
+        with:
+          token: ${{ secrets.CR_TOKEN }}
