chore: skill issue

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,4 +28,4 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io/locmai --username locmai --password-stdin
           helm dependency build ./charts/${{ steps.get_chart_name.outputs.chart_name }}
           helm package ./charts/${{ steps.get_chart_name.outputs.chart_name }}
-          helm push ${{ env.RELEASE_TAG }}.tgz oci://ghcr.io/locmai
+          helm push ./charts/${{ env.RELEASE_TAG }}.tgz oci://ghcr.io/locmai
